--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 .App {
-    width: 300px;
+    width: 330px;
     margin: auto;
     text-align: center;
 }
@@ -41,25 +41,68 @@ nav > div {
     margin: auto;
 }
 
-.parkingAreaContainer {
+.mainContainer {
     width: 300px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 30px;
+    border: 5px white;
+    border-style: solid dotted solid dotted;
 }
 
-.parkingArea .parkingSpot {
-    background-color: rgb(199, 199, 199);
+.areaChoiceContainer {
+    display: flex;
 }
+.areaChoiceContainer > a {
+    margin: auto;
+}
+
+.parkingAreaContainer > div:nth-child(2) {
+    margin-top: 10px;
+}
+
+.parkingSpot {
+    background: linear-gradient(
+        -128deg,
+        rgb(96, 169, 34) 3%,
+        rgb(33, 132, 38) 88%,
+        rgb(12, 157, 12) 150%
+    );
+    margin: 3px;
+}
+.parkingSpot > div {
+    margin-top: 10%;
+}
+.parkingSpot:hover {
+    cursor: pointer;
+    border: 3px dotted rgb(216, 216, 216);
+    transition: border 0.1s;
+}
+
 .parkingArea .selected {
-    border: solid 10px rgb(240, 217, 90);
-}
-
-.parkingArea .byUser {
-    background-color: rgb(17, 82, 168) !important;
+    border: 3px dotted white;
+    border-radius: 3px;
+    transition: border 0.1s;
 }
 
 .parkingArea .occupied {
-    background-color: rgb(219, 128, 128);
+    background: linear-gradient(
+        -128deg,
+        rgb(255, 104, 104) 3%,
+        rgba(239, 39, 153, 0.93) 88%,
+        rgb(255, 104, 104) 150%
+    );
+}
+
+.parkingArea .byUser {
+    background: linear-gradient(
+        -128deg,
+        rgb(71, 193, 255) 3%,
+        rgba(39, 116, 239, 0.93) 88%,
+        rgb(104, 190, 255) 150%
+    );
 }
 
 .parkingSpotsContainer {
