fixed background gradient

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,9 @@ html {
     width: 100vw;
     background: linear-gradient(
         -128deg,
-        rgb(69, 0, 129) 3%,
-        rgba(255, 0, 145, 0.93) 75%,
-        rgba(146, 4, 103, 0.93) 100%
+        rgb(0, 0, 0) 3%,
+        rgb(182, 0, 64) 67%,
+        rgb(0, 0, 0) 103%
     );
     color: white;
 }
