--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -102,3 +102,20 @@ hr {
     border-bottom: 1px dotted white;
     width: 50%;
 }
+
+input {
+    background: none;
+    color: white;
+    border: 2px solid white;
+    padding: 15px;
+    font-size: 20px;
+    text-align: center;
+}
+input:focus {
+    box-shadow: 0px 0px 20px red;
+    transition: box-shadow 1s;
+}
+
+::placeholder {
+    color: rgb(214, 214, 214);
+}
